discussion/kv_engine/176433/176433_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 13:01:51.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 13:15:12.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19502/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18: error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
        collector.addStat(std::string_view(key.data(), key.size()), statValue);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:19:7: note: forward declaration of "StatCollector"
class StatCollector;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1: error: expected unqualified-id [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1455:1: error: use of undeclared identifier "RangeScanTest_dropped_collection_for_continue_Test" [clang-diagnostic-error]
TEST_P(RangeScanTest, dropped_collection_for_continue) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest-param-test.h:434:7: note: expanded from macro "TEST_P"
  int GTEST_TEST_CLASS_NAME_(test_suite_name,                                  \
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/internal/gtest-internal.h:1524:3: note: expanded from macro "GTEST_TEST_CLASS_NAME_"
  test_suite_name##_##test_name##_Test
  ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1546:29: error: use of undeclared identifier "uuid" [clang-diagnostic-error]
                      vbid, uuid, *cookie, 0, std::chrono::milliseconds(0), 0));
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19502/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19502/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48401/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1452): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48401/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40668/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40668/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9192/ : FAILURE

Compile error at [2022-08-16T13:10:10.823Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9192/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9289/ : FAILURE

Compile error at [2022-08-16T13:14:48.953Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21439/ : FAILURE

Compile error at [2022-08-16T13:11:46.685Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22514/ : FAILURE

Compile error at [2022-08-16T13:06:57.262Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22514/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21792/ : FAILURE

Compile error at [2022-08-16T13:09:35.588Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21792/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29817/ : FAILURE

Compile error at [2022-08-16T13:13:09.245Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20697/ : FAILURE

Compile error at [2022-08-16T13:13:43.122Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1452:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20697/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18713/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
